detalles de css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container">
-      <div>
+      <div class="buscador">
         <input type="text" name="" placeholder="Ciudad" id="" />
         <button>Buscar</button>
       </div>
