--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div>
         <div class="clima">Clima en Buenos Aires</div>
-        <h2>21 C°</h2>
+        <h2 class="temperatura-clima">21 C°</h2>
 
         <div class="descripcion">Nublado</div>
         <img src="" alt="" class="icono-clima" />
