Funcionalidad Js completa

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
   <body>
     <div class="container">
       <div class="buscador">
-        <input type="text" name="" placeholder="Ciudad" id="" />
-        <button>Buscar</button>
+        <input class="buscatex" type="text" name="" placeholder="Ciudad" id="" />
+        <button class ="accion-buscar">Buscar</button>
       </div>
       <div>
-        <div class="clima">Clima en Buenos Aires</div>
-        <h2 class="temperatura-clima">21 C°</h2>
+        <div class="clima">Busca el Clima en tu Ciudad</div>
+        <h2 class="temperatura-clima">Temperatura</h2>
 
-        <div class="descripcion">Nublado</div>
+        <div class="descripcion">Descripcion</div>
         <img src="" alt="" class="icono-clima" />
 
-        <div class="humedad">Humedad : 85%</div>
-        <div class="viento">Viento :11 km/h</div>
+        <div class="humedad">Humedad</div>
+        <div class="viento">Viento</div>
       </div>
     </div>
 
