--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body style=" background-image:   url(night-lights-road-tower-wallpaper-preview.jpg) ;
+  background-size:cover; ">
     <div class="container">
       <div class="buscador">
         <input class="buscatex" type="text" name="" placeholder="Ciudad" id="" />
