--- a/index.html
+++ b/index.html
@@ -12,12 +12,22 @@
       rel="stylesheet"
     />
   </head>
-  <body style=" background-image:url(night-lights-road-tower-wallpaper-preview.jpg) ;
-  background-size:cover;">
+  <body
+    style="
+      background-image: url(night-lights-road-tower-wallpaper-preview.jpg);
+      background-size: cover;
+    "
+  >
     <div class="container">
       <div class="buscador">
-        <input class="buscatex" type="text" name="" placeholder="Ciudad" id="" />
-        <button class ="accion-buscar">Buscar</button>
+        <input
+          class="buscatex"
+          type="text"
+          name=""
+          placeholder="Ciudad"
+          id=""
+        />
+        <button class="accion-buscar">Buscar</button>
       </div>
       <div>
         <div class="clima">Busca el Clima en tu Ciudad</div>
